--- a/src/app/settings-tab/settings.page.html
+++ b/src/app/settings-tab/settings.page.html
@@ -1,9 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Three
+      Settings
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content></ion-content>
