--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -36,9 +36,9 @@
                       <ion-item>
                         <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
                       </ion-item>
-                      <ion-item>
+                      <!-- <ion-item>
                         <ion-input name="confirm" type="password" placeholder="Password again" ngModel required></ion-input>
-                      </ion-item>
+                      </ion-item> -->
                     </div>
                     <div padding>
                       <ion-button  size="large" type="submit" [disabled]="form.invalid || sendingRequest || !usernameAvailable" expand="block">
