fix typescript warnings

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -19,7 +19,7 @@
                           Account created succesfully
                       </ion-text>
                       <ion-text color="danger" *ngIf="!sendingRequest && success===false">
-                          Account creation failed. Please try again later.
+                          Account creation failed.
                       </ion-text>
                     </div>
                     <div padding>
