--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -15,5 +15,9 @@
       <ion-icon name="settings"></ion-icon>
       <ion-label>Settings</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="chat">
+      <ion-icon name="chatboxes"></ion-icon>
+      <ion-label>Chat</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
